--- a/timeline/style.css
+++ b/timeline/style.css
@@ -1,5 +1,5 @@
 .artifact {
-    background: #fff;
+    background: #888;
 	border-radius: 5px;
 	margin-top: 10px;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -15,28 +15,55 @@
 }
 
 .artifact .contents {
-	transition: max-height 0.5s;
-	padding: 10px;
-	max-height: 200px;
+	background: #fff;
+	transition: all 0.5s;
+	max-height: 100px;
 	overflow: hidden;
-	opacity: 0.5;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+}
+
+.artifact.active .contents {
+	overflow-y: scroll;
+	overflow-y: auto;
+	max-height: calc(100% - 90px);
+}
+
+.artifact .contents > * {
+	opacity: 0.8;
+	filter: blur(2px);
+	transition: all 0.5s;
+}
+
+.artifact.active .contents > * {
+	opacity: 1;
+	filter: blur(0px);
+}
+
+.artifact .contents > .darkbox {
+	transform: scale(1.1);
+}
+
+.artifact.active .contents > .darkbox {
+	transform: scale(1);
 }
 
 .darkbox {
 	width: 100%;
-	background: #333;
+	background: #222;
 	display: flex; 
 	justify-content: center;
 }
 
 .darkbox img {
-	width: 100%;
+	max-width: 100%;
+	max-height: 100%;
+	display: block;
+	background: #333;
 }
 
-.artifact.active .contents .darkbox img {
-	background: #333;
-	width: auto;
-	height: 100%;
+.artifact.active .darkbox img {
+	margin: auto;
 }
 
 .artifact .caption {
@@ -44,17 +71,6 @@
     background: #fff;
     font-family: sans-serif;
 	padding: 15px;
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
-}
-
-.artifact.active .contents {
-	overflow-y: scroll;
-	opacity: 1;
-}
-
-.artifact.active .contents {
-	overflow-y: auto;
-	max-height: calc(100% - 90px);
-	opacity: 1;
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
 }
